business_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: business-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: business-app

  template:
    metadata:
      labels:
        app: business-app

    spec:
      containers:
        - name: business-app

          image: sunilkumar45/business-project:16
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 2330
