mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: business-mysql

spec:
  replicas: 1

  selector:
    matchLabels:
      app: business-mysql

  template:
    metadata:
      labels:
        app: business-mysql

    spec:
      containers:
        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
