app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: business-app-service

spec:
  selector:
    app: business-app

  ports:
    - protocol: TCP
      port: 2330
      targetPort: 2330

  type: NodePort
