db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: business-mysql

spec:
  selector:
    app: business-mysql

  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

  type: NodePort
