ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: business-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: business.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: business-app-service
                port:
                  number: 2330
